refactor: refactor CalculateActivityPrice to use strategy pattern for selecting and delegating pricing calculation